// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardContentYotpoReviewTopics/> render() should render children as a list of pills 1`] = `
<div
  class="topTopicsContainer"
>
  <span
    class="container"
  >
    <span
      class="label"
    >
      <span
        class="material-icons favorite"
      >
        favorite
      </span>
      Top Mentioned Topics
    </span>
  </span>
  <span
    class="topics"
  >
    <div
      class="ui-badge-badge-0cf8 topic ui-badge-uppercase-0cf8"
      data-color="grey"
      data-corner="round"
      data-name="badge"
      data-type="light"
    >
      bread
    </div>
    <div
      class="ui-badge-badge-0cf8 topic ui-badge-uppercase-0cf8"
      data-color="grey"
      data-corner="round"
      data-name="badge"
      data-type="light"
    >
      test
    </div>
  </span>
</div>
`;

exports[`<CardContentYotpoReviewTopics/> render() should render correctly if children is empty/null 1`] = `
<div
  class="topTopicsContainer"
>
  <span
    class="container"
  >
    <span
      class="label"
    >
      <span
        class="material-icons favorite"
      >
        favorite
      </span>
      Top Mentioned Topics
    </span>
  </span>
  <span
    class="topics"
  />
</div>
`;

exports[`<CardContentYotpoReviewTopics/> render() should render correctly if children is empty/null 2`] = `
<div
  class="topTopicsContainer"
>
  <span
    class="container"
  >
    <span
      class="label"
    >
      <span
        class="material-icons favorite"
      >
        favorite
      </span>
      Top Mentioned Topics
    </span>
  </span>
  <span
    class="topics"
  />
</div>
`;

exports[`<CardContentYotpoReviewTopics/> render() should render correctly if children is empty/null 3`] = `
<div
  class="topTopicsContainer"
>
  <span
    class="container"
  >
    <span
      class="label"
    >
      <span
        class="material-icons favorite"
      >
        favorite
      </span>
      Top Mentioned Topics
    </span>
  </span>
  <span
    class="topics"
  />
</div>
`;
